// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PublicationsListPaging renders  component with empty paging data 1`] = `
<span
  className="publicationsListPaging empty"
/>
`;

exports[`PublicationsListPaging renders  component with non-empty paging data, first page 1`] = `
<div>
  <div
    className="publicationsListControls columns is-gapless is-mobile"
  >
    <div
      className="column"
    />
    <div
      className="column is-narrow"
    >
      <IconButton
        className="iconPrevious"
        disableTouchRipple={false}
        disabled={true}
        iconStyle={Object {}}
        onTouchTap={[Function]}
        tooltip="Previous"
        tooltipPosition="top-left"
        touch={false}
      >
        <NavigationChevronLeft />
      </IconButton>
    </div>
    <div
      className="column is-narrow is-hidden-tablet-only is-hidden-mobile"
    >
      <FlatButton
        className="pagingLabel"
        disabled={false}
        fullWidth={false}
        label="Page 1 of 3 (60 records)"
        labelPosition="after"
        labelStyle={Object {}}
        onKeyboardFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onTouchStart={[Function]}
        primary={false}
        secondary={false}
      />
    </div>
    <div
      className="column is-narrow is-hidden-desktop"
    >
      <FlatButton
        className="pagingLabel"
        disabled={false}
        fullWidth={false}
        label="Page 1 of 3"
        labelPosition="after"
        labelStyle={Object {}}
        onKeyboardFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onTouchStart={[Function]}
        primary={false}
        secondary={false}
      />
    </div>
    <div
      className="column is-narrow"
    >
      <IconButton
        className="iconNext"
        disableTouchRipple={false}
        disabled={false}
        iconStyle={Object {}}
        onTouchTap={[Function]}
        tooltip="Next"
        tooltipPosition="top-right"
        touch={false}
      >
        <NavigationChevronRight />
      </IconButton>
    </div>
    <div
      className="column"
    />
  </div>
  <div
    className="publicationsListPaging columns is-multiline is-gapless is-hidden-mobile is-hidden-tablet-only"
  >
    <FlatButton
      className="pagingPrevious"
      disabled={true}
      fullWidth={false}
      label="Previous"
      labelPosition="after"
      labelStyle={Object {}}
      onKeyboardFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchStart={[Function]}
      onTouchTap={[Function]}
      primary={false}
      secondary={false}
    />
    <FlatButton
      className="page selectedPage"
      disabled={true}
      fullWidth={false}
      label={1}
      labelPosition="after"
      labelStyle={Object {}}
      onKeyboardFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchStart={[Function]}
      onTouchTap={[Function]}
      primary={false}
      secondary={false}
    />
    <FlatButton
      className="page"
      disabled={false}
      fullWidth={false}
      label={2}
      labelPosition="after"
      labelStyle={Object {}}
      onKeyboardFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchStart={[Function]}
      onTouchTap={[Function]}
      primary={false}
      secondary={false}
    />
    <FlatButton
      className="page"
      disabled={false}
      fullWidth={false}
      label={3}
      labelPosition="after"
      labelStyle={Object {}}
      onKeyboardFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchStart={[Function]}
      onTouchTap={[Function]}
      primary={false}
      secondary={false}
    />
    <FlatButton
      className="pagingNext"
      disabled={false}
      fullWidth={false}
      label="Next"
      labelPosition="after"
      labelStyle={Object {}}
      onKeyboardFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchStart={[Function]}
      onTouchTap={[Function]}
      primary={false}
      secondary={false}
    />
  </div>
</div>
`;

exports[`PublicationsListPaging renders  component with non-empty paging data, last page 1`] = `
<div>
  <div
    className="publicationsListControls columns is-gapless is-mobile"
  >
    <div
      className="column"
    />
    <div
      className="column is-narrow"
    >
      <IconButton
        className="iconPrevious"
        disableTouchRipple={false}
        disabled={false}
        iconStyle={Object {}}
        onTouchTap={[Function]}
        tooltip="Previous"
        tooltipPosition="top-left"
        touch={false}
      >
        <NavigationChevronLeft />
      </IconButton>
    </div>
    <div
      className="column is-narrow is-hidden-tablet-only is-hidden-mobile"
    >
      <FlatButton
        className="pagingLabel"
        disabled={false}
        fullWidth={false}
        label="Page 3 of 3 (60 records)"
        labelPosition="after"
        labelStyle={Object {}}
        onKeyboardFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onTouchStart={[Function]}
        primary={false}
        secondary={false}
      />
    </div>
    <div
      className="column is-narrow is-hidden-desktop"
    >
      <FlatButton
        className="pagingLabel"
        disabled={false}
        fullWidth={false}
        label="Page 3 of 3"
        labelPosition="after"
        labelStyle={Object {}}
        onKeyboardFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onTouchStart={[Function]}
        primary={false}
        secondary={false}
      />
    </div>
    <div
      className="column is-narrow"
    >
      <IconButton
        className="iconNext"
        disableTouchRipple={false}
        disabled={true}
        iconStyle={Object {}}
        onTouchTap={[Function]}
        tooltip="Next"
        tooltipPosition="top-right"
        touch={false}
      >
        <NavigationChevronRight />
      </IconButton>
    </div>
    <div
      className="column"
    />
  </div>
  <div
    className="publicationsListPaging columns is-multiline is-gapless is-hidden-mobile is-hidden-tablet-only"
  >
    <FlatButton
      className="pagingPrevious"
      disabled={false}
      fullWidth={false}
      label="Previous"
      labelPosition="after"
      labelStyle={Object {}}
      onKeyboardFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchStart={[Function]}
      onTouchTap={[Function]}
      primary={false}
      secondary={false}
    />
    <FlatButton
      className="page"
      disabled={false}
      fullWidth={false}
      label={1}
      labelPosition="after"
      labelStyle={Object {}}
      onKeyboardFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchStart={[Function]}
      onTouchTap={[Function]}
      primary={false}
      secondary={false}
    />
    <FlatButton
      className="page"
      disabled={false}
      fullWidth={false}
      label={2}
      labelPosition="after"
      labelStyle={Object {}}
      onKeyboardFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchStart={[Function]}
      onTouchTap={[Function]}
      primary={false}
      secondary={false}
    />
    <FlatButton
      className="page selectedPage"
      disabled={true}
      fullWidth={false}
      label={3}
      labelPosition="after"
      labelStyle={Object {}}
      onKeyboardFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchStart={[Function]}
      onTouchTap={[Function]}
      primary={false}
      secondary={false}
    />
    <FlatButton
      className="pagingNext"
      disabled={true}
      fullWidth={false}
      label="Next"
      labelPosition="after"
      labelStyle={Object {}}
      onKeyboardFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchStart={[Function]}
      onTouchTap={[Function]}
      primary={false}
      secondary={false}
    />
  </div>
</div>
`;

exports[`PublicationsListPaging renders  component with non-empty paging data, second page 1`] = `
<div>
  <div
    className="publicationsListControls columns is-gapless is-mobile"
  >
    <div
      className="column"
    />
    <div
      className="column is-narrow"
    >
      <IconButton
        className="iconPrevious"
        disableTouchRipple={false}
        disabled={false}
        iconStyle={Object {}}
        onTouchTap={[Function]}
        tooltip="Previous"
        tooltipPosition="top-left"
        touch={false}
      >
        <NavigationChevronLeft />
      </IconButton>
    </div>
    <div
      className="column is-narrow is-hidden-tablet-only is-hidden-mobile"
    >
      <FlatButton
        className="pagingLabel"
        disabled={false}
        fullWidth={false}
        label="Page 2 of 3 (60 records)"
        labelPosition="after"
        labelStyle={Object {}}
        onKeyboardFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onTouchStart={[Function]}
        primary={false}
        secondary={false}
      />
    </div>
    <div
      className="column is-narrow is-hidden-desktop"
    >
      <FlatButton
        className="pagingLabel"
        disabled={false}
        fullWidth={false}
        label="Page 2 of 3"
        labelPosition="after"
        labelStyle={Object {}}
        onKeyboardFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onTouchStart={[Function]}
        primary={false}
        secondary={false}
      />
    </div>
    <div
      className="column is-narrow"
    >
      <IconButton
        className="iconNext"
        disableTouchRipple={false}
        disabled={false}
        iconStyle={Object {}}
        onTouchTap={[Function]}
        tooltip="Next"
        tooltipPosition="top-right"
        touch={false}
      >
        <NavigationChevronRight />
      </IconButton>
    </div>
    <div
      className="column"
    />
  </div>
  <div
    className="publicationsListPaging columns is-multiline is-gapless is-hidden-mobile is-hidden-tablet-only"
  >
    <FlatButton
      className="pagingPrevious"
      disabled={false}
      fullWidth={false}
      label="Previous"
      labelPosition="after"
      labelStyle={Object {}}
      onKeyboardFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchStart={[Function]}
      onTouchTap={[Function]}
      primary={false}
      secondary={false}
    />
    <FlatButton
      className="page"
      disabled={false}
      fullWidth={false}
      label={1}
      labelPosition="after"
      labelStyle={Object {}}
      onKeyboardFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchStart={[Function]}
      onTouchTap={[Function]}
      primary={false}
      secondary={false}
    />
    <FlatButton
      className="page selectedPage"
      disabled={true}
      fullWidth={false}
      label={2}
      labelPosition="after"
      labelStyle={Object {}}
      onKeyboardFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchStart={[Function]}
      onTouchTap={[Function]}
      primary={false}
      secondary={false}
    />
    <FlatButton
      className="page"
      disabled={false}
      fullWidth={false}
      label={3}
      labelPosition="after"
      labelStyle={Object {}}
      onKeyboardFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchStart={[Function]}
      onTouchTap={[Function]}
      primary={false}
      secondary={false}
    />
    <FlatButton
      className="pagingNext"
      disabled={false}
      fullWidth={false}
      label="Next"
      labelPosition="after"
      labelStyle={Object {}}
      onKeyboardFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchStart={[Function]}
      onTouchTap={[Function]}
      primary={false}
      secondary={false}
    />
  </div>
</div>
`;
